--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "32d7a1bf",
    "metadata": {},
    "outputs": [
@@ -31,36 +31,7 @@
       " 13  RNF                      10000 non-null  int64  \n",
       "dtypes: float64(3), int64(9), object(2)\n",
       "memory usage: 1.1+ MB\n",
-      "None\n",
-      "               UDI  Air temperature [K]  Process temperature [K]  \\\n",
-      "count  10000.00000         10000.000000             10000.000000   \n",
-      "mean    5000.50000           300.004930               310.005560   \n",
-      "std     2886.89568             2.000259                 1.483734   \n",
-      "min        1.00000           295.300000               305.700000   \n",
-      "25%     2500.75000           298.300000               308.800000   \n",
-      "50%     5000.50000           300.100000               310.100000   \n",
-      "75%     7500.25000           301.500000               311.100000   \n",
-      "max    10000.00000           304.500000               313.800000   \n",
-      "\n",
-      "       Rotational speed [rpm]   Torque [Nm]  Tool wear [min]  Machine failure  \\\n",
-      "count            10000.000000  10000.000000     10000.000000     10000.000000   \n",
-      "mean              1538.776100     39.986910       107.951000         0.033900   \n",
-      "std                179.284096      9.968934        63.654147         0.180981   \n",
-      "min               1168.000000      3.800000         0.000000         0.000000   \n",
-      "25%               1423.000000     33.200000        53.000000         0.000000   \n",
-      "50%               1503.000000     40.100000       108.000000         0.000000   \n",
-      "75%               1612.000000     46.800000       162.000000         0.000000   \n",
-      "max               2886.000000     76.600000       253.000000         1.000000   \n",
-      "\n",
-      "                TWF           HDF           PWF           OSF          RNF  \n",
-      "count  10000.000000  10000.000000  10000.000000  10000.000000  10000.00000  \n",
-      "mean       0.004600      0.011500      0.009500      0.009800      0.00190  \n",
-      "std        0.067671      0.106625      0.097009      0.098514      0.04355  \n",
-      "min        0.000000      0.000000      0.000000      0.000000      0.00000  \n",
-      "25%        0.000000      0.000000      0.000000      0.000000      0.00000  \n",
-      "50%        0.000000      0.000000      0.000000      0.000000      0.00000  \n",
-      "75%        0.000000      0.000000      0.000000      0.000000      0.00000  \n",
-      "max        1.000000      1.000000      1.000000      1.000000      1.00000  \n"
+      "None\n"
      ]
     },
     {
@@ -144,7 +115,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "7a2281f9-7a9d-4a14-b423-73c6b19a469c",
+       "ref": "6df74173-64ab-4d8c-8c3a-a800aea1b0fe",
        "rows": [
         [
          "0",
